<resources>
    <string name="app_name">PersonaX</string>
    <string name="text_login">Login</string>
    <string name="text_password">Password</string>
    <string name="text_username">Username</string>
    <string name="text_title_illustration_1">Discover Your Digital Identity</string>
    <string name="text_sub_title_illustration_1">Manage your personal, professional, and financial information securely in one place.</string>
    <string name="text_title_illustration_2">Showcase Yourself</string>
    <string name="text_sub_title_illustration_2">Store your photo and essential details like name, age, and gender in one easy-to-access profile.</string>
    <string name="text_title_illustration_3">Seamless Communication</string>
    <string name="text_sub_title_illustration_3">Call, email, or navigate to an address with a single tap.</string>
    <string name="text_title_illustration_4">Your Personal Data, Visualized</string>
    <string name="text_sub_title_illustration_4">Track your height, weight, blood type, and unique details like hair and eye color.</string>
    <string name="text_title_illustration_5">Build Your Career Profile</string>
    <string name="text_sub_title_illustration_5">Manage your company details and job position to enhance your professional presence.</string>
    <string name="text_user_image">User Image</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_logout">Logout</string>
    <string name="text_location_icon">Location Icon</string>
    <string name="text_email_icon">Email Icon</string>
    <string name="text_phone_icon">Phone Icon</string>
    <string name="text_stats">STATS</string>
    <string name="text_weight">Weight</string>
    <string name="text_height">Height</string>
    <string name="text_age">Age</string>
    <string name="text_not_found">Not Found</string>
    <string name="text_hair">Hair</string>
    <string name="text_blood_type">Blood type</string>
    <string name="text_eye_color">Eye</string>
    <string name="text_theme">Theme</string>
    <string name="text_empty">Empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>