<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_surface"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="Detail Page"
            app:titleTextAppearance="@style/Title.Large" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/text_user_image"
            android:scaleType="fitXY"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/icon_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/iv_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_image">

            <!-- Icon 1 -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fl_phone"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/md_theme_primaryContainer"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/text_phone_icon"
                    android:src="@drawable/baseline_phone_24" />
            </com.google.android.material.card.MaterialCardView>

            <!-- Icon 2 -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fl_email"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/md_theme_primaryContainer"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/text_email_icon"
                    android:src="@drawable/baseline_email_24" />
            </com.google.android.material.card.MaterialCardView>

            <!-- Icon 3 -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fl_maps"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/md_theme_primaryContainer"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/text_location_icon"
                    android:src="@drawable/baseline_location_on_24" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>